2007-11-27  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefields/forcefieldmmff94.*, data/mmffsymb.par: Formal
	charges are now assigned correctly.

2007-11-25  Patrick Spendrin, Christian Ehrlicher
	
	* */CMakeLists.txt: some improvements to get it running under win32

2007-11-25 Chris Morley

	* src/dlhandler_win32.cpp, generic.cpp,
	
	* include/openbabel/atomclass.h, alias.h:
	Including atomclass.h and alias.h into dlhandler_win32.cpp breaks
	code segregation (OBConversion and user interfaces do not know
	about the chemistry.) Include in generic.cpp instead and change
	the build macros used by 'native' MSVC8 build from OBCOMMON to OBAPI
	I hope this fits ok with CMake.
	
2007-11-24  Patrick Spendrin, Christian Ehrlicher
	
	* include/openbabel/atomclass.h: adding support for sstream
	
	* src/config.h.cmake: cleanup
	
	* src/dlhandler_win32.cpp: improvements for msvc
	
	* */CMakeLists.txt: improving CMake based buildsystem esp. for win32
	and mingw32 - it builds now again, though there will come more improvements
	next

2007-11-18  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefields/forcefieldmmff94.*, data/mmffsymb.par: Atom typing 
	works!!
	
	* src/forcefield.cpp, include/openbabel/forcefield.h,
	tools/obminimize.cpp: Added DetectExplosion() to aid in debugging the
	problem with planar molecules.

	* src/typer.cpp, data/ringtyp.txt, include/openbabel/mol.h: Fixed some
	bugs and added more ringtypes.

	* src/ring.cpp, include/openbabel/ring.h: Added GetRootAtom(), returns
	the index of the root atom (e.g. O in furan, ...)

2007-11-20  Chris Morley

	* src/formats/xml/cmlformat.cpp: Now Has own WriteChemObject
	so OBReaction object can bypass OBMoleculeFormat functionality
	and be passed directly to WriteMolecule.
	WriteMolecule passes OBReaction objects to CMLReactFormat.
	Restore handling of WriteAromaticBonds which somehow got deleted. 
	
	* src/formats/xml/cmlreactformat.cpp: Changes to handling of